# SME0852-SME0829

./: pyproject.toml  trab3.ipynb
