[tool.poetry]
name = "sme0852"
version = "0.1.0"
description = ""
authors = ["Pedro HB Ribeiro <pedro.hbueno03@usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
plotly = "^6.0.1"
numpy = "^2.2.4"
unidecode = "^1.3.8"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
